--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,7 +3,7 @@
 
 {{#if posts}}
     <ul>
-        {{#each posts as |post}}
+        {{#each posts as |post|}}
             <li>
                 <h2><a href="/posts/{{post.id}}">{{post.title}}</a></h2>
                 <p>{{post.summary}}</p>
