--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -1,20 +1,13 @@
-{{#extend "main"}}
-
-{{#content "body"}}
 <h1>Create a New Blog Post</h1>
 
 <form id="newPostForm" action="/api/posts" method="POST">
     <div>
-        <label for="title">Tutle:</label>
+        <label for="title">Title:</label>
         <input type="text" id="title" name="title" required>
     </div>
     <div>
-        <label for="contents">Content:</label>
-        <textarea id="contents" name="contents" rows="4" required></textarea>
+        <label for="content">Content:</label>
+        <textarea id="content" name="content" rows="4" required></textarea>
     </div>
     <button type="submit">Create Post</button>
 </form>
-
-{{/content}}
-
-{{/extend}}
