--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,8 +4,8 @@
     <ul>
         {{#each userPosts as |post|}}
             <li>
-                <h2>{{post.title}}</h2>
-                <p>{{post.summary}}</p>
+                <h2><a href="/posts/{{post.id}}">{{post.title}}</a></h2>
+                <p>{{post.content}}</p>
                 <a href="/edit/{{post.id}}">Edit</a>
                 <a href="/delete/{{post.id}}">Delete</a>
             </li>
