--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -6,13 +6,16 @@
             <li>
                 <h2><a href="/posts/{{post.id}}">{{post.title}}</a></h2>
                 <p>{{post.content}}</p>
-                <a href="/edit/{{post.id}}">Edit</a>
-                <a href="/delete/{{post.id}}">Delete</a>
+                <a href="/dashboard/edit/{{post.id}}">Edit</a>
+
+                <form action="/dashboard/delete/{{post.id}}" method="POST">
+                    <input type="submit" value="Delete">   
+                </form>
             </li>
         {{/each}}
     </ul>
     <a href="/create">Create New Post</a>
 {{else}}
     <p>You have not created any posts yet.</p>
-    <a href="/create">Create Your First Post</a>
+    <a href="/create">Create A New Post</a>
 {{/if}}
