--- a/views/editPost.handlebars
+++ b/views/editPost.handlebars
@@ -1,6 +1,6 @@
 <h1>Edit Post</h1>
 
-<form action="/posts/{{post.id}}/update" method="POST">
+<form action="/dashboard/update/{{post.id}}" method="POST">
     <div class="form-group">
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" class="form-control" value="{{post.title}}" required>
@@ -12,4 +12,4 @@
     <button type="submit" class="btn btn-primary">Save Changes</button>
 </form>
 
-<a href="'/dashboard">Back to Dashboard</a>
+<a href="/dashboard">Back to Dashboard</a>
