--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,20 +1,22 @@
-<h1>{{post.title}}</h1>
-<p>{{post.content}}</p>
-{{#if post.user}}
-    <p>Creator: {{post.user.username}}</p>
-{{/if}}
-<p>Date Created: {{post.createdAt}}</p>
+<div class="post-details">
+    <h1>{{post.title}}</h1>
+    <p>{{post.content}}</p>
+    {{#if post.user}}
+        <p>Creator: {{post.user.username}}</p>
+    {{/if}}
+    <p>Date Created: {{post.createdAt}}</p>
+</div>
 
-<form action="/api/posts/{{post.id}}/comments" method="POST">
+<form action="/api/posts/{{post.id}}/comments" method="POST" class="comment-form">
     <textarea name="commentText" rows="4" cols="50" placeholder="Leave a comment"></textarea>
     <button type="submit">Submit</button>
 </form>
 
 {{#if post.comments.length}}
     <h2>Comments</h2>
-    <ul>
+    <ul class="comments-list">
         {{#each post.comments as |comment|}}
-        <li>
+        <li class="comment">
             <p>{{comment.commentText}}</p>
             {{#if comment.commentUser}}
                 <p>Comment by: {{comment.commentUser.username}}</p>
